--- a/index.html
+++ b/index.html
@@ -4,23 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="Home.html"><svg xmlns="http://www.w3.org/2000/svg" height="35px" viewBox="0 -960 960 960" width="35px" fill="#000000"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></a></li>
+            <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
             <li class="hideOnMobile"><a href="#">Buttons</a></li>
             <li class="hideOnMobile"><a href="#">Dogs Tricks</a></li>
             <li class="hideOnMobile"><a href="#">Builds</a></li>
             <li class="hideOnMobile"><a href="#">Remote Controller</a></li>
-            <li class="menu-button"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35px" viewBox="0 -960 960 960" width="35px" fill="#000000"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
     </nav>
     <div class="pop-up">
-        
+        <div class="pop-up-header">
+            <div class="pop-up-title">Title</div>
+            <button><span class="material-symbols-outlined">close</span></button>
+        </div>
+        <div class="pop-up-body">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam 
+            voluptatum suscipit, et labore eos nihil, rerum ipsam sapiente ullam 
+            temporibus tempore id nobis quis, incidunt nostrum quidem maxime 
+            praesentium harum nulla ducimus qui error. Impedit, odit suscipit. Amet,
+            deserunt eligendi maxime cupiditate magni nemo libero commodi fugiat 
+            impedit, quaerat doloremque exercitationem inventore sapiente ducimus 
+            dolore blanditiis provident accusantium mollitia odio sequi vel 
+            distinctio molestias sint voluptate? Consequatur repudiandae illum cum 
+            veniam ad et. Voluptates dicta illo qui sequi ut deserunt sit officia 
+            vitae cumque aliquam, adipisci ipsam repellendus, enim laborum temporibus,
+            alias neque ex nesciunt. Nulla, optio? Eligendi minus enim ratione 
+            recusandae delectus minima dolore possimus quo consectetur. 
+            Aut eaque recusandae dolorum nulla vero ullam earum veritatis nisi porro
+            reiciendis facilis hic, necessitatibus et cum voluptate amet iure veniam
+            minus in. Illo, quia a reprehenderit, nemo harum possimus, aliquid 
+            maiores eveniet delectus rerum molestias deserunt architecto? Voluptate
+            perspiciatis quo magnam impedit laboriosam praesentium dolor neque 
+            minus soluta cupiditate. Nemo temporibus quaerat tempore nam non sunt 
+            officia optio vel a magnam sed quam assumenda, rem quis consequuntur 
+            est autem corporis ex inventore ipsum nostrum debitis. Sed, modi, 
+            nostrum obcaecati ad quia, expedita ipsam aut iusto odio quibusdam 
+            quod labore dicta assumenda!
     </div>
-    
+
+        </span>
 </body>
 </html>
