--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
-            <li class="hideOnMobile"><a href="#">Buttons</a></li>
-            <li class="hideOnMobile"><a href="#">Dogs Tricks</a></li>
-            <li class="hideOnMobile"><a href="#">Builds</a></li>
-            <li class="hideOnMobile"><a href="#">Remote Controller</a></li>
+            <li class="hideOnSmall"><a href="#">Buttons</a></li>
+            <li class="hideOnSmall"><a href="#">Dogs Tricks</a></li>
+            <li class="hideOnSmall"><a href="#">Builds</a></li>
+            <li class="hideOnSmall"><a href="#">Remote Controller</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
     </nav>
     <div class="pop-up">
         <div class="pop-up-header">
-            <div class="pop-up-title">Title</div>
-            <button><span class="material-symbols-outlined">close</span></button>
+            <div class="pop-up-title">Warning!</div>
+            <button><span class="material-symbols-outlined close-pop-up">close</span></button>
         </div>
         <div class="pop-up-body">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam 
