added buttons and h1 for result

--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <ul>
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
-            <li class="hideOnSmall"><a href="#">Buttons</a></li>
+            <li class="hideOnSmall"><a href="Buttons.html">Buttons</a></li>
             <li class="hideOnSmall"><a href="#">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="#">Builds</a></li>
             <li class="hideOnSmall"><a href="#">Remote Controller</a></li>
