added Prime function

--- a/Home.html
+++ b/Home.html
@@ -6,9 +6,9 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script defer src="home.js"></script>
 </head>
-<body>
+<body class="body">
     <nav class="navbar">
         <ul>
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
@@ -21,7 +21,7 @@
     </nav>
     <div class="pop-up">
         <div class="pop-up-header">
-            <div class="pop-up-title">Warning!</div>
+            <div class="pop-up-title">Hello!</div>
             <button><span class="material-symbols-outlined close-pop-up">close</span></button>
         </div>
         <div class="pop-up-body">
