--- a/Buttons.html
+++ b/Buttons.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script defer src="buttons.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -21,9 +21,9 @@
     </nav>
     <div class="buttons-container"></div>
         <div class="buttons-input">
-            <input type="text" class="dogs-age-input" placeholder="Enter Your Dogs Age"></input>
-            <input type="text" class="prime-number-input"placeholder="Enter A Number"></input>
-            <input type="text" class="zodiac-input"placeholder="Enter Your Birth Month"></input>
+            <input type="text" id="dog" class="dogs-age-input input" placeholder="Enter Your Dogs Age"></input>
+            <input type="text" id="prime" lass="prime-number-input input"placeholder="Enter A Number"></input>
+            <input type="text" id="zodiac" class="zodiac-input input"placeholder="Enter Your Birth Month"></input>
         </div>
         <div class="buttons-button">
             <button class="dogs-button">Dogs Age</button>
