added zodiac functions

--- a/Buttons.html
+++ b/Buttons.html
@@ -23,7 +23,7 @@
         <div class="buttons-input">
             <input type="text" id="dog" class="dogs-age-input input" placeholder="Enter Your Dogs Age"></input>
             <input type="text" id="prime" lass="prime-number-input input"placeholder="Enter A Number"></input>
-            <input type="text" id="zodiac" class="zodiac-input input"placeholder="Enter Your Birth Month"></input>
+            <input type="text" id="zodiac" class="zodiac-input input"placeholder="Enter Your Birth Year"></input>
         </div>
         <div class="buttons-button">
             <button class="dogs-button">Dogs Age</button>
