added videos and finished the DOM

--- a/Buttons.html
+++ b/Buttons.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></a></li>
             <li class="hideOnSmall"><a href="Buttons.html">Buttons</a></li>
-            <li class="hideOnSmall"><a href="#">Dogs Tricks</a></li>
+            <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="#">Builds</a></li>
             <li class="hideOnSmall"><a href="#">Remote Controller</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
