--- a/Home.html
+++ b/Home.html
@@ -14,8 +14,8 @@
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
             <li class="hideOnSmall"><a href="Buttons.html">Buttons</a></li>
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
-            <li class="hideOnSmall"><a href="#">Builds</a></li>
-            <li class="hideOnSmall"><a href="#">Remote Controller</a></li>
+            <li class="hideOnSmall"><a href="#">?</a></li>
+            <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
     </nav>
