--- a/Builds.html
+++ b/Builds.html
@@ -6,7 +6,7 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <script defer src="buttons.js"></script>
+    <script defer src="builds.js"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -19,21 +19,12 @@
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
     </nav>
-    <div class="buttons-container"></div>
-        <div class="buttons-input">
-            <input type="text" id="dog" class="dogs-age-input input" placeholder="Enter Your Dogs Age"></input>
-            <input type="text" id="prime" lass="prime-number-input input"placeholder="Enter A Number"></input>
-            <input type="text" id="zodiac" class="zodiac-input input"placeholder="Enter Your Birth Year"></input>
-        </div>
-        <div class="buttons-button">
-            <button class="dogs-button">Dogs Age</button>
-            <button class="prime-button">Is It Prime</button>
-            <button class="zodiac-button">Zodiac Sign</button>
-        </div>
-        <div class="buttons-result-container">
-            <h1 class="buttons-result"></h1>
-        </div>  
+    <div class="photo-container">
+        <button class="previous-button">Previous</button>
+        <div class="lfx-photos"><img id="lfxImages" src="images/lfx1.jpg" width="540" height=></div>
+        <button class="next-button">Next</button>
     </div>
-    
+    <div class="photo-description">
+        <p>Total Wine at Miami Beach</p>
+    </div>
 </body>
-</html>
