--- a/Dogs.html
+++ b/Dogs.html
@@ -13,7 +13,7 @@
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></a></li>
             <li class="hideOnSmall"><a href="Buttons.html">Buttons</a></li>
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
-            <li class="hideOnSmall"><a href="#">?</a></li>
+            <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
