added a toggle on all pages

--- a/Home.html
+++ b/Home.html
@@ -16,37 +16,16 @@
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
-            <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
+            <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
     <div class="pop-up">
         <div class="pop-up-header">
-            <div class="pop-up-title">Hello!</div>
+            <div class="pop-up-title">Joke!</div>
             <button><span class="material-symbols-outlined close-pop-up">close</span></button>
         </div>
         <div class="pop-up-body">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam 
-            voluptatum suscipit, et labore eos nihil, rerum ipsam sapiente ullam 
-            temporibus tempore id nobis quis, incidunt nostrum quidem maxime 
-            praesentium harum nulla ducimus qui error. Impedit, odit suscipit. Amet,
-            deserunt eligendi maxime cupiditate magni nemo libero commodi fugiat 
-            impedit, quaerat doloremque exercitationem inventore sapiente ducimus 
-            dolore blanditiis provident accusantium mollitia odio sequi vel 
-            distinctio molestias sint voluptate? Consequatur repudiandae illum cum 
-            veniam ad et. Voluptates dicta illo qui sequi ut deserunt sit officia 
-            vitae cumque aliquam, adipisci ipsam repellendus, enim laborum temporibus,
-            alias neque ex nesciunt. Nulla, optio? Eligendi minus enim ratione 
-            recusandae delectus minima dolore possimus quo consectetur. 
-            Aut eaque recusandae dolorum nulla vero ullam earum veritatis nisi porro
-            reiciendis facilis hic, necessitatibus et cum voluptate amet iure veniam
-            minus in. Illo, quia a reprehenderit, nemo harum possimus, aliquid 
-            maiores eveniet delectus rerum molestias deserunt architecto? Voluptate
-            perspiciatis quo magnam impedit laboriosam praesentium dolor neque 
-            minus soluta cupiditate. Nemo temporibus quaerat tempore nam non sunt 
-            officia optio vel a magnam sed quam assumenda, rem quis consequuntur 
-            est autem corporis ex inventore ipsum nostrum debitis. Sed, modi, 
-            nostrum obcaecati ad quia, expedita ipsam aut iusto odio quibusdam 
-            quod labore dicta assumenda!
+            Why did David Hasselhoff change his name to “The Hoff?”
     </div>
 
         </span>
