--- a/Buttons.html
+++ b/Buttons.html
@@ -16,7 +16,7 @@
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
-            <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
+            <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
     <div class="buttons-container"></div>
