--- a/Dogs.html
+++ b/Dogs.html
@@ -15,7 +15,7 @@
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
-            <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
+            <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
     <div class="video-button-container">
@@ -33,9 +33,31 @@
     const charleeButtonElement = document.querySelector('.charlee-button');
     const charleeVideoElement = document.querySelector('.charlee-beer');
     const juneVideoElement = document.querySelector('.june-sitting');
+    const toggleElement = document.querySelector('.toggle');
+    const navbarElement = document.querySelector('.navbar');
+    const bodyElement = document.querySelector('body');
 
     let juneClicked = false;
     let charleeClicked = false;
+    let toggled = false;
+    toggleElement.addEventListener('click', () => {
+        if(toggled === false) {
+            navbarElement.style.backgroundColor = 'rgb(125, 167, 193)';
+            toggleElement.style.color = 'green'
+            bodyElement.style.backgroundImage = "url('images/cleanBackground.jpg')";
+            juneButtonElement.style.backgroundColor = 'rgb(66, 110, 144)';
+            charleeButtonElement.style.backgroundColor = 'rgb(66, 110, 144)';
+            toggled = true;
+        } else {
+            navbarElement.style.backgroundColor ='rgb(255, 255, 255)';
+            toggleElement.style.color = 'black'
+            bodyElement.style.backgroundImage = "url('images/wood-dock.jpg')";
+            juneButtonElement.style.backgroundColor = 'rgb(255, 137, 137)';
+            charleeButtonElement.style.backgroundColor = 'rgb(255, 137, 137)';
+            toggled = false;
+        }
+        
+    })
 
     juneButtonElement.addEventListener('click', () => {
         if (juneClicked === true) {
