added two more buttons in Button.html

--- a/Buttons.html
+++ b/Buttons.html
@@ -34,6 +34,29 @@
             <h1 class="buttons-result"></h1>
         </div>  
     </div>
-    
+    <div class="buttons-container2">
+        <div class="buttons-button2">
+            <button class="color-button">Favorite Color</button>
+            <button class="random-button">Random</button>
+        </div>
+        <div class="buttons-input2">
+            <select id="colorDropdown">
+                <option value="" placeholder="Select a Color">Select a Color</option>
+                <option value="Red">Red</option>
+                <option value="Violet">Violet</option>
+                <option value="Blue">Blue</option>
+                <option value="Green">Green</option>
+                <option value="Yellow">Yellow</option>
+                <option value="Orange">Orange</option>
+            </select>
+            <select id="randomDropdown">
+                <option value="" placeholder="Select a Color">Select a Topic</option>
+                <option value="Movie">Movie Quote</option>
+                <option value="Records">World Records</option>
+                <option value="Holiday">Holidays</option>
+            </select>
+        </div>
+
+    </div>
 </body>
 </html>
