made squares do a bunch of random thingsincluded size

--- a/Builds.html
+++ b/Builds.html
@@ -16,6 +16,7 @@
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
+            <li class="hideOnSmall"><a href="Random.html">Random</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
