--- a/Random.html
+++ b/Random.html
@@ -6,7 +6,7 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <script defer src="home.js"></script>
+    <script defer src="Random.js"></script>
 </head>
 <body class="body">
     <nav class="navbar">
@@ -16,19 +16,33 @@
             <li class="hideOnSmall"><a href="Dogs.html">Dogs Tricks</a></li>
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
-            <li class="hideOnSmall"><a href="Objects.html">Random</a></li>
+            <li class="hideOnSmall"><a href="Random.html">Random</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
-    <div class="pop-up">
-        <div class="pop-up-header">
-            <div class="pop-up-title">Joke!</div>
-            <button><span class="material-symbols-outlined close-pop-up">close</span></button>
-        </div>
-        <div class="pop-up-body">
-            Why did David Hasselhoff change his name to “The Hoff?”
+    <div class="scramble-button">
+        <button>Scramble Everything</button>
     </div>
-
-        </span>
+    <div class="div-container1">
+        <div class="div">
+            <div id="one"></div>
+            <div id="two"></div>
+            <div id="three"></div>
+        </div>
+    </div>
+    <div class="div-container1">
+        <div class="div">
+            <div id="four"></div>
+            <div id="five"></div>
+            <div id="six"></div>
+        </div>
+    </div>
+    <div class="div-container1">
+        <div class="div">
+            <div id="seven"></div>
+            <div id="eight"></div>
+            <div id="nine"></div>
+        </div>
+    </div>
 </body>
 </html>
