--- a/Buttons.html
+++ b/Buttons.html
@@ -17,6 +17,7 @@
             <li class="hideOnSmall"><a href="Builds.html">Builds</a></li>
             <li class="hideOnSmall"><a href="Remote.html">Remote Controller</a></li>
             <li class="hideOnSmall"><a href="Random.html">Random</a></li>
+            <li class="hideOnSmall"><a href="MontyHall.html">Monty Hall</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined toggle">toggle_on</span></a></li>
         </ul>
     </nav>
