added random images of goats and cars, made my functions cleaner for the Monty hall problem

--- a/MontyHall.html
+++ b/MontyHall.html
@@ -12,11 +12,11 @@
     <nav class="navbar">
         <ul>
             <li><a href="Home.html"><span class="material-symbols-outlined home-icon">home</span></svg></a></li>
-            <li class="hideOnMobile"><a href="#">Buttons</a></li>
-            <li class="hideOnMobile"><a href="#">Dogs Tricks</a></li>
-            <li class="hideOnMobile"><a href="#">Builds</a></li>
-            <li class="hideOnMobile"><a href="#">Remote Controller</a></li>
-            <li class="hideOnSmall"><a href="MontyHall.html">Monty Hall</a></li>
+            <li class="hideOnMobile"><a href="Buttons.html">Buttons</a></li>
+            <li class="hideOnMobile"><a href="Dogs.html">Dogs Tricks</a></li>
+            <li class="hideOnMobile"><a href="Builds.html">Builds</a></li>
+            <li class="hideOnSmall"><a href="Objects.html">Random</a></li>
+             <li class="hideOnSmall"><a href="MontyHall.html">Monty Hall</a></li>
             <li class="menu-button"><a href="#"><span class="material-symbols-outlined menu-icon">menu</span></a></li>
         </ul>
     </nav>
@@ -33,16 +33,18 @@
         
     </div>
     <div class="doors-container">
-        <div id="door1" class="goat">🚪</div>
-        <div id="door2" class="goat">🚪</div>
-        <div id="door3" class="car">🚪</div>
+        <div id="door1" class="goat"><span class="door-emoji">🚪</span></div>
+        <div id="door2" class="goat"><span class="door-emoji">🚪</span></div>
+        <div id="door3" class="car"><span class="door-emoji">🚪</span></div>
     </div>
     <div class="doors-number">
         <div>Door 1</div>
         <div>Door 2</div>
         <div>Door 3</div>
     </div>
-
+    <div class="button-container">
+        <button>Play Again</button>
+    </div>
     <div class="winner-loser">
         <h1></h1>
     </div>
